[package]
name = "sablast"
version = "0.2.0"
edition = "2021"
rust-version = "1.77.0"
authors = ["Tommi Mäklin <tommi@maklin.fi>"]
description = "Spectral Burrows-Wheeler transform accelerated local alignment search"
readme = "README.md"
homepage = "https://github.com/tmaklin/sablast"
repository = "https://github.com/tmaklin/sablast"
license = "MIT OR Apache-2.0"

[package.metadata.patch]
crates = ["needletail", "sbwt"]

[patch.crates-io]
needletail = { path="./target/patch/needletail-0.5.1" }
sbwt = { path="./target/patch/sbwt-0.3.2" }

[dependencies]
## core
### Disable bzip2 and liblzma because of build issues with target wasm32-wasip1
needletail = { version = "0.5.1", default-features = false, features = ["flate2"] }
rayon = "1"
sbwt = "0.3.2"

## cli
clap = { version = "4", features = ["derive"] }

## docs
embed-doc-image="0.1.4"

## logging
log = "0.4.20"
stderrlog = "0.6.0"

[build-dependencies]
patch-crate = "0.1"

[dev-dependencies]
## tests
assert_approx_eq = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
