[package]
name = "sablast"
version = "0.2.0"
edition = "2021"
rust-version = "1.77.0"
authors = ["Tommi Mäklin <tommi@maklin.fi>"]
description = "Spectral Burrows-Wheeler transform accelerated local alignment search"
readme = "README.md"
homepage = "https://github.com/tmaklin/sablast"
repository = "https://github.com/tmaklin/sablast"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## core
# TODO Re-enable reading compressed sequences in needletail
# This requires resolving the libllzma linker issue in build_artifacts.yml
needletail = { version = "0.5.1", default-features = false }
rayon = "1"
sbwt = "0.3.2"

## cli
clap = { version = "4", features = ["derive"] }

## docs
embed-doc-image="0.1.4"

## logging
log = "0.4.20"
stderrlog = "0.6.0"

[dev-dependencies]
## tests
assert_approx_eq = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
